python-masakariclient: Address reviewer feedback
Change-Id: I8e7157f663654a6beb3bdb20748f03ef540ea38e

--- a/openstack/python-masakariclient/python-masakariclient.spec.j2
+++ b/openstack/python-masakariclient/python-masakariclient.spec.j2
@@ -35,7 +35,7 @@ Client library for Masakari built on the Masakari API. It provides a Python API
 
 %package doc
 Summary:        Documentation for OpenStack Masakari API client libary
-Group:          Documentation
+Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('oslosphinx') }}
 
