--- a/openstack/horizon/horizon.spec.j2
+++ b/openstack/horizon/horizon.spec.j2
@@ -1,5 +1,5 @@
 {% set pypi_name = 'horizon' %}
-{% set upstream_version = '11.0.2' %}
+{% set upstream_version = '12.0.0.0rc1' %}
 {% set rpm_release = '1' %}
 
 %define component {{ pypi_name }}
@@ -18,6 +18,8 @@ License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 Url:            http://wiki.openstack.org/OpenStackDashboard
 Source0:        http://tarballs.openstack.org/%{component}/%{component}-{{upstream_version}}.tar.gz
+# https://review.openstack.org/#/c/495847/
+Patch1:         0001-Make-nosehtmloutput-an-optional-test-requirement.patch
 BuildRequires:  fdupes
 BuildRequires:  gettext
 BuildRequires:  openstack-macros
@@ -178,7 +180,7 @@ The Python module horizon is the core component of the OpenStack
 dashboard.
 
 %prep
-%autosetup  -n %{component}-{{upstream_version}}
+%autosetup -p1 -n %{component}-{{upstream_version}}
 %py_req_cleanup
 
 %build
@@ -192,7 +194,7 @@ popd
 %{py2_build}
 
 %check
-python manage.py test horizon --settings=horizon.test.settings --ignore-files="(test_hacking|firefox_binary|webdriver)"
+python manage.py test horizon --settings=horizon.test.settings --ignore-files="(test_hacking|firefox_binary|webdriver|pull_catalog)"
 # TODO
 # python manage.py test openstack_dashboard --settings=openstack_dashboard.test.settings --exclude-dir=openstack_dashboard/test/integration_tests
 
