--- a/openstack/ovsdbapp/ovsdbapp.spec.j2
+++ b/openstack/ovsdbapp/ovsdbapp.spec.j2
@@ -1,6 +1,6 @@
 %define with_tests 0
 {% set pypi_name = 'ovsdbapp' %}
-{% set upstream_version = upstream_version('0.4.0') %}
+{% set upstream_version = upstream_version('0.5.0') %}
 {% set rpm_release = '1' %}
 Name:           {{ py2name() }}
 Version:        {{ py2rpmversion() }}
@@ -33,7 +33,7 @@ the Python 'ovs' and adds an event loop and friendly transactions.
 %package doc
 Summary:        Documentation for OpenStack log library
 BuildRequires:  {{ py2pkg('Sphinx') }}
-BuildRequires:  {{ py2pkg('oslosphinx') }}
+BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
 %description doc
 Documentation for the ovsdbap library.
@@ -41,6 +41,7 @@ Documentation for the ovsdbap library.
 %prep
 %autosetup -p1 -n {{pypi_name }}-%{version}
 %py_req_cleanup
+sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
 
 %build
 %{py2_build}
