automaton: Fix url
Change-Id: I80e5fdcd0d32941bd797177fd0273aba59e500ac

--- a/openstack/automaton/automaton.spec.j2
+++ b/openstack/automaton/automaton.spec.j2
@@ -5,7 +5,7 @@ Release:        0
 Summary:        Friendly state machines for python
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
-Url:            https://launchpad/%{sname}
+Url:            https://launchpad.net/%{sname}
 Source0:        https://pypi.io/packages/source/a/%{sname}/%{sname}-%{version}.tar.gz
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('PrettyTable') }}
