--- a/openstack/monasca-common/monasca-common.spec.j2
+++ b/openstack/monasca-common/monasca-common.spec.j2
@@ -1,5 +1,6 @@
 {% set pypi_name = 'monasca-common' %}
-{% set upstream_version = upstream_version('2.2.0') %}
+{% set source = fetch_source('http://tarballs.openstack.org/monasca-common/monasca-common-stable-pike.tar.gz') %}
+{% set upstream_version = upstream_version() %}
 {% set rpm_release = '1' %}
 
 %global sname {{ pypi_name }}
@@ -10,7 +11,7 @@ Summary:        Reusable code for building monitoring related services.
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 Url:            https://wiki.openstack.org/wiki/Monasca
-Source0:        https://pypi.io/packages/source/m/%{sname}/%{sname}-%{version}.tar.gz
+Source0:        {{ source|basename }}
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('PyMySQL') }}
 BuildRequires:  {{ py2pkg('kazoo') }}
@@ -43,7 +44,7 @@ Collection of sub-projects containing reusable application and
 platform code for building monitoring related services.
 
 %prep
-%autosetup -n %{sname}-%{version}
+%autosetup -n %{sname}-{{ upstream_version }}
 %py_req_cleanup
 
 %build
