--- a/openstack/monasca-log-api/monasca-log-api.spec.j2
+++ b/openstack/monasca-log-api/monasca-log-api.spec.j2
@@ -1,5 +1,6 @@
 {% set pypi_name = 'monasca-log-api' %}
-{% set upstream_version = upstream_version('2.2.1') %}
+{% set source = fetch_source('http://tarballs.openstack.org/monasca-log-api/monasca-log-api-stable-pike.tar.gz') %}
+{% set upstream_version = upstream_version() %}
 {% set rpm_release = '1' %}
 
 %define sname           {{ pypi_name }}
@@ -10,7 +11,7 @@ Summary:        OpenStack Monasca Log Api plugin
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 Url:            https://wiki.openstack.org/wiki/Monasca
-Source0:        https://pypi.io/packages/source/m/%{sname}/%{sname}-%{version}.tar.gz
+Source0:        {{ source|basename }}
 Source1:        %{name}-wsgi.conf
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('falcon') }}
@@ -65,7 +66,7 @@ monasca-log-api is a RESTful API server receiving logs from the deployed
 log agents.
 
 %prep
-%autosetup -n %{sname}-%{version}
+%autosetup -n %{sname}-{{ upstream_version }}
 %py_req_cleanup
 
 %build
