--- a/openstack/monasca-notification/monasca-notification.spec.j2
+++ b/openstack/monasca-notification/monasca-notification.spec.j2
@@ -1,5 +1,6 @@
 {% set pypi_name = 'monasca-notification' %}
-{% set upstream_version = upstream_version('1.7.0') %}
+{% set source = fetch_source('http://tarballs.openstack.org/monasca-notification/monasca-notification-stable-pike.tar.gz') %}
+{% set upstream_version = upstream_version() %}
 {% set rpm_release = '1' %}
 
 %global sname   monasca-notification
@@ -14,10 +15,12 @@ Summary:        Notification engine sends notifications based on alarm transitio
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 Url:            https://wiki.openstack.org/wiki/Monasca
-Source0:        https://pypi.io/packages/source/m/%{sname}/%{sname}-%{version}.tar.gz
+Source0:        {{ source|basename }}
 Source1:        openstack-%{sname}.service
 Source2:        %{sname}.yaml
 BuildRequires:  openstack-macros
+BuildRequires:  {{ py2pkg('Jinja2') }}
+BuildRequires:  {{ py2pkg('SQLAlchemy') }}
 BuildRequires:  {{ py2pkg('mock') }}
 BuildRequires:  {{ py2pkg('monasca-common') }}
 BuildRequires:  {{ py2pkg('monasca-statsd') }}
@@ -66,7 +69,7 @@ whenever a new process joins or leaves the working set.
 This package contains the core Python module of Monasca-notification
 
 %prep
-%autosetup -n %{sname}-%{version}
+%autosetup -n %{sname}-{{ upstream_version }}
 %py_req_cleanup
 
 %build
@@ -94,6 +97,8 @@ ln -s %{_sbindir}/service %{buildroot}%{_sbindir}/rc%{name}
 %check
 export OS_TEST_PATH=./tests
 find . -type f -name *.pyc -delete
+# do not run jira tests for now
+rm -r tests/test_jira_notification.py
 PYTHONPATH=. %{__python2} setup.py testr
 
 %pre
