monasca-*: Use {{ upstream_version }} for %autosetup
That way, it is easier after stable-branching to switch to stable
tarball tracking. Only 'upstream_version', 'fetch_source' and 'Source'
need to be changed.

Change-Id: Iaffe1fed77f925f4773cfc7ce7efbb21728df748

--- a/openstack/monasca-agent/monasca-agent.spec.j2
+++ b/openstack/monasca-agent/monasca-agent.spec.j2
@@ -103,7 +103,7 @@ sending them to the Monasca API.
 This package contains monasca-agent Python module.
 
 %prep
-%autosetup -n %{sname}-%{version}
+%autosetup -n %{sname}-{{ upstream_version }}
 %py_req_cleanup
 # contains various binary files etc that we don't need
 rm -rf packaging/monasca-agent{,-deb}
