Update ceilometermiddleware to 0.5.2
Change-Id: I7a90214c75d650cd2f1aee22cac1639726a78e0c

--- a/openstack/ceilometermiddleware/ceilometermiddleware.spec.j2
+++ b/openstack/ceilometermiddleware/ceilometermiddleware.spec.j2
@@ -1,6 +1,6 @@
 %global pypi_name ceilometermiddleware
 Name:           {{ py2name('ceilometermiddleware') }}
-Version:        0.5.1
+Version:        0.5.2
 Release:        0
 Summary:        A library for metric and event data generation for Ceilometer
 License:        {{ license('Apache-2.0') }}
@@ -8,7 +8,10 @@ Group:          Development/Languages/Python
 Url:            http://docs.openstack.org/developer/ceilometermiddleware
 Source0:        https://tarballs.openstack.org/%{pypi_name}/%{pypi_name}-%{version}.tar.gz
 BuildRequires:  openstack-macros
-BuildRequires:  python-devel
+BuildRequires:  {{ py2pkg('betamax') }}
+BuildRequires:  {{ py2pkg('devel') }}
+BuildRequires:  {{ py2pkg('keystoneauth1') }}
+BuildRequires:  {{ py2pkg('python-keystoneclient') }}
 BuildRequires:  {{ py2pkg('mock') }}
 BuildRequires:  {{ py2pkg('oslo.config') }}
 BuildRequires:  {{ py2pkg('oslo.messaging') }}
@@ -19,6 +22,8 @@ BuildRequires:  {{ py2pkg('pycadf') }}
 BuildRequires:  {{ py2pkg('python-subunit') }}
 BuildRequires:  {{ py2pkg('setuptools') }}
 BuildRequires:  {{ py2pkg('testrepository') }}
+Requires:       {{ py2pkg('keystoneauth1') }}
+Requires:       {{ py2pkg('python-keystoneclient') }}
 Requires:       {{ py2pkg('oslo.config') }}
 Requires:       {{ py2pkg('oslo.messaging') }}
 Requires:       {{ py2pkg('oslo.utils') }}
